--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,40 +1,24 @@
 * {
     box-sizing: border-box;
-  }
-
-html,body{
-    width: 100%;
-    height: 100%;
-    font-family: Montserrat,sans-serif;
-    /* background-image: url(../img/group.svg), url(../img/back.webp);
-    background-position: center, center;
-    background-repeat: no-repeat, no-repeat; */
-    
-    background: url(../img/group.svg) top  no-repeat  , url(../img/back.webp) center no-repeat fixed rgba(24, 24, 41, 0.7);
-    
-    background-size: 700px, cover ;
-
-    /* font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    color: #FFFFFF;
-    font-size: 62.5%; */
-  box-sizing: border-box;
 }
 
-a{
+
+
+a {
     text-decoration: none;
-}
+    -webkit-tap-highlight-color: transparent;
+  }
 
 body p{
     
     color: #FFFFFF;
 }
+
 p a{ 
     text-decoration: none;
     color: #FFFFFF;
 }
+
 a i{
     text-decoration: none;
     color: #FFFFFF;
@@ -43,6 +27,7 @@ a i{
 li a{
     color: #FFFFFF;
 }
+
 .wrapper{
     min-height: 100%;
     display: flex;
@@ -50,32 +35,336 @@ li a{
     
 }
 
-main{
+/* main{
     margin-bottom: 40px;
-}
+} */
 
-.main{
-    flex: 1 1 auto;
-    margin: 3.5rem 10.5em; 
-    /* padding-right: 40px; */
-} 
 
-.title{
-    font-family: 'Inter';
+@media only screen and (max-width: 481px) {
+    html,body{
+        width: 100%;
+        height: 100%;
+        font-family: Montserrat,sans-serif;
+        background: url(../img/group.svg) center  no-repeat fixed  , url(../img/back.webp) center no-repeat fixed #300C23;
+        background-size: 350px, cover ;
+        box-sizing: border-box;
+    }
+    .main{
+        flex: 1 1 auto;
+        /* margin: 3.5rem 0.5em;  */
+        margin: 3.5rem auto;
+        /* padding-right: 40px; */
+    } 
+
+    .college1{
+        display: grid;
+        grid-template-columns: auto;
+        gap: 10px;
+        padding: 5px;
+        /* grid-template-rows: auto auto auto auto; */
+    }
+
+    .title{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 550;
+        font-size: 28px;
+        line-height: 38px;
+        text-align: center;
+        color: #FFFFFF;
+    }   
+
+    .title-text{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 550;
+        font-size: 26px;
+        line-height: 34px;
+        text-align: center;
+        color: #FFFFFF;
+        /* margin-bottom: 0.2em; */
+    }
+    
+    .img{
+        /* width: 150px; */
+        height: 150px;
+    }
+      
+    .footer{
+        margin: 0.5em auto;
+    }
+        
+    .footer_content{
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+    }
+    
+    .footer-title-text{
+        
+        font-style: normal;
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 29px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+    
+    .social-icons {
+        
+        display: grid;
+        font-size: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-flow: column;
+        grid-auto-flow: column;
+        justify-content: center;
+        padding: 3px;
+        grid-auto-columns: 1fr;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .footer_text{
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+   
+    .copyright{
+        margin: 1.5rem 0.5rem auto 0.5rem ;
+        font-family: 'Inter';
     font-style: normal;
-    font-weight: 700;
-    font-size: 31px;
-    line-height: 38px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
     text-align: center;
-    color: #FFFFFF;
-}
-.college1{
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 10px;
-    padding: 5px;
-    grid-template-rows: auto auto;
-}
+    }
+  }
+
+
+@media only screen and (min-width: 482px) {
+    html,body{
+        width: 100%;
+        height: 100%;
+        font-family: Montserrat,sans-serif;
+        background: url(../img/group.svg) center  no-repeat fixed  , url(../img/back.webp) center no-repeat fixed rgba(24, 24, 41, 0.7);
+        background-size: 650px, cover ;
+        box-sizing: border-box;
+    }
+    .main{
+        flex: 1 1 auto;
+        /* margin: 3.5rem 0.5em;  */
+        margin: 3.5rem auto;
+        /* padding-right: 40px; */
+    } 
+
+    .college1{
+        display: grid;
+        grid-template-columns: auto;
+        gap: 10px;
+        padding: 5px;
+        /* grid-template-rows: auto auto auto auto; */
+    }
+
+    .title{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 550;
+        font-size: 28px;
+        line-height: 38px;
+        text-align: center;
+        color: #FFFFFF;
+    }   
+
+    .title-text{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 550;
+        font-size: 26px;
+        line-height: 34px;
+        text-align: center;
+        color: #FFFFFF;
+        /* margin-bottom: 0.2em; */
+    }
+    
+    .img{
+        /* width: 150px; */
+        height: 150px;
+    }
+    
+    .footer{
+    
+        /* margin: 0 10.5em; */
+        margin: 0.8em auto;
+    }
+        
+    .footer_content{
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+    }
+    
+    .footer-title-text{
+        
+        font-style: normal;
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 29px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+    
+    .social-icons {
+        
+        display: grid;
+        font-size: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-flow: column;
+        grid-auto-flow: column;
+        justify-content: center;
+        padding: 3px;
+        grid-auto-columns: 1fr;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .footer_text{
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+   
+    .copyright{
+        margin: 1.5rem 0.5rem auto 0.5rem ;
+        font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
+    }
+  }
+
+@media only screen and (min-width: 1025px) {
+    html,body{
+        width: 100%;
+        height: 100%;
+        font-family: Montserrat,sans-serif;        
+        background: url(../img/group.svg) top  no-repeat  fixed, url(../img/back.webp) center no-repeat fixed rgba(24, 24, 41, 0.7);
+        background-size: 800px, cover ;
+        box-sizing: border-box;
+    }
+
+    .main{
+        /* flex: 1 1 auto; */
+        margin: 3.5rem 10.5em; 
+        /* margin: 3.5rem auto; */
+        /* padding-right: 40px; */
+    } 
+
+    .college1{
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 10px;
+        padding: 5px;
+        grid-template-rows: auto auto;
+    }
+    .title{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 31px;
+        line-height: 38px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+
+    .title-text{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 34px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+
+   
+
+    .img{
+        /* width: 150px; */
+        height: 150px;
+    }
+      
+    .footer{
+    
+        margin: 0.8em 10.5em;
+        
+        /* margin: 0 auto; */
+        /* padding: 0 0.6em; */
+    }
+    
+    .footer_content{
+        display: flex;
+        flex-flow: row wrap;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    
+    
+    .footer-title-text{
+        
+        font-style: normal;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 29px;
+        color: #FFFFFF;
+    }
+    
+    .social-icons {
+        
+        display: grid;
+        font-size: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-flow: column;
+        grid-auto-flow: column;
+        justify-content: center;
+        padding: 3px;
+        grid-auto-columns: 1fr;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .footer_text{
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 24px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+
+    .copyright{
+        margin-top: 1.5rem;
+        margin-bottom: auto;
+        font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 15px;
+    text-align: center;
+    }
+  }
+  
+ 
+
+
 
 .college1> div {
     text-align: center;
@@ -85,74 +374,3 @@ main{
 
 
 
-.img{
-    /* width: 150px; */
-    height: 150px;
-}
-
-.title-text{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
-    text-align: center;
-    color: #FFFFFF;
-}
-
-
-.footer{
-
-    margin: 0 10.5em;
-}
-
-
-.footer_content{
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-title-text{
-    
-    font-style: normal;
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 29px;
-    color: #FFFFFF;
-}
-
-.social-icons {
-    display: grid;
-    font-size: 3rem;
-    grid-template-columns: repeat(3, 1fr);display: grid;
-    font-size: 3rem;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-flow: column;
-    grid-auto-flow: column;
-    justify-content: center;
-    padding: 3px;
-    grid-auto-columns: 1fr;
-    align-items: center;
-    text-align: center;
-}
-
-.footer_text{
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-
-
-.copyright{
-    margin-top: 1.5rem;
-    margin-bottom: auto;
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 15px;
-}
