--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
     <title>Бібліотеки фахових коледжів Одеського національного технічного університету</title>
 </head>
 <body>
@@ -38,13 +36,12 @@
                     </div>
                     <div class=" college">
                         <a class="college" href="{% url 'nti' %}">
-                            <img class="img" src="{% static 'img/nti.svg' %}" alt="">
-                            <p class="title-text">Фаховий коледжнафтогазових
+                            <img class="img" src="{% static 'img/nti_start.svg' %}" alt="">
+                            <p class="title-text">Фаховий коледж нафтогазових
                                 технологій, інженерії та
                                 інфраструктури сервісу
                             </p>
                         </a>
-                        
                     </div>
                     <div class=" college">
                         <a href="{% url 'kpa' %}">
@@ -58,7 +55,7 @@
                     
                 </div>
             </div>
-                <h2 class="title-text">Науково-технічна бібліотека Одеського національного технологічного університету</h2>
+                <h2 class="title">Науково-технічна бібліотека Одеського національного технологічного університету</h2>
             
         </main>
 
@@ -109,6 +106,5 @@
     </div >
     <script src="{% static 'js/index.js' %}">
     </script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
 </body>
 </html>
